tests/lang/s00_bootstrap/t07_b_invalid_identifier_underscore_tail.nim
discard """
  description: "No trailing underscores in identifier names."
  errormsg: "invalid token: trailing underscore"

  # don't test for line and column numbers for ease of implementation
"""

no_tails_